Add reset style, add css grid to side-bar container, add style to buttons, add more icons

--- a/index.html
+++ b/index.html
@@ -14,35 +14,46 @@
     <body>
         <div class="container">
             <div class="side-bar">
-                <div class="logo">
-                    <img src="images/view-dashboard-variant.svg" height="30px">
-                    <div>Dashboard</div>
-                </div>
-                <div class="side-bar-list">
-                    <ol class="first-list">
-                        <li><img src="images/home.svg" width="20px">Home</li>
-                        <li><img src="images/profile.svg" width="20px">Profile</li>
-                        <li><img src="images/messages.svg" width="20px">Messages</li>
-                        <li><img src="images/history.svg" width="20px">History</li>
-                        <li><img src="images/tasks.svg" width="20px">Tasks</li>
-                        <li><img src="images/communities.svg" width="20px">Communities</li>
-                    </ol>
-                    <ol class="second-list">
-                        <li><img src="images/settings.svg" width="20px">Settings</li>
-                        <li><img src="images/support.svg" width="20px">Support</li>
-                        <li><img src="images/privacy.svg" width="20px">Privacy</li>
-                    </ol>
-                </div>
+                <img src="images/dashboard.svg" height="30px">
+                <div class="logo">Dashboard</div>
+                <img src="images/home.svg" width="20px">
+                <div>Home</div>
+                <img src="images/profile.svg" width="20px">
+                <div>Profile</div>
+                <img src="images/messages.svg" width="20px">
+                <div>Messages</div>
+                <img src="images/history.svg" width="20px">
+                <div>History</div>
+                <img src="images/tasks.svg" width="20px">
+                <div>Tasks</div>
+                <img src="images/communities.svg" width="20px">
+                <div>Communities</div>
+                <img src="images/settings.svg" width="20px">
+                <div>Settings</div>
+                <img src="images/support.svg" width="20px">
+                <div>Support</div>
+                <img src="images/privacy.svg" width="20px">
+                <div>Privacy</div>
             </div>
 
             <div class="header">
-                <div class="search">Placeholder for search bar</div>
-                <div class="name">Morgan Oakley</div>
-                <div class="greeting">Hi there,<br>Morgan Oakley (@morgan)</div>
+                <div class="search">
+                    <img src="images/search.svg" width="15px">
+                    <input name="search-bar" type="text">
+                </div>
+                <div class="name">
+                    <img src="images/bell.svg" width="20px">
+                    <img src="images/cat.svg" width="20px">
+                    <div>Morgan Oakley</div>
+                </div>
+                <div class="greeting">
+                    <img src="images/cat.svg" width="50px">
+                    <div>Hi there,<br>Morgan Oakley (@morgan)</div>
+                </div>
                 <div class="buttons">
-                    <div>New</div>
-                    <div>Upload</div>
-                    <div>Share</div>
+                    <button>New</button>
+                    <button>Upload</button>
+                    <button>Share</button>
                 </div>
             </div>
 
@@ -51,21 +62,39 @@
                     <div>Your Projects</div>
                     <div class="project">Super cool project
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                        <img src="images/star.svg" width="15px">
+                        <img src="images/eye.svg" width="15px">
+                        <img src="images/share.svg" width="15px">
                     </div>
                     <div class="project">Less cool project
                         <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                        <img src="images/star.svg" width="15px">
+                        <img src="images/eye.svg" width="15px">
+                        <img src="images/share.svg" width="15px">
                     </div>
                     <div class="project">Impossible app
                         <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
+                        <img src="images/star.svg" width="15px">
+                        <img src="images/eye.svg" width="15px">
+                        <img src="images/share.svg" width="15px">
                     </div>
                     <div class="project">Easy peasy app
                         <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        <img src="images/star.svg" width="15px">
+                        <img src="images/eye.svg" width="15px">
+                        <img src="images/share.svg" width="15px">
                     </div>
                     <div class="project">Ad blocker
                         <p>Ipsum faucibus vitae aliquet nec ullamcorper sit amet risus. Viverra adipiscing at in tellus integer feugiat scelerisque varius. </p>
+                        <img src="images/star.svg" width="15px">
+                        <img src="images/eye.svg" width="15px">
+                        <img src="images/share.svg" width="15px">
                     </div>
                     <div class="project">Money maker
                         <p>Nunc lobortis mattis aliquam faucibus purus in. Auctor eu augue ut lectus arcu bibendum at varius vel. </p>
+                        <img src="images/star.svg" width="15px">
+                        <img src="images/eye.svg" width="15px">
+                        <img src="images/share.svg" width="15px">
                     </div>
                 </div>
                 <div class="announcements">
@@ -77,18 +106,22 @@
                 <div class="trending">
                     <div>Trending</div>
                     <div class="person">
+                        <img src="images/horse.svg" width="15px">
                         <div>@tegan</div>
                         <div>World Peace Builder</div>
                     </div>
                     <div class="person">
+                        <img src="images/cat.svg" width="15px">
                         <div>@morgan</div>
                         <div>Productivity App</div>
                     </div>
                     <div class="person">
+                        <img src="images/tortoise.svg" width="15px">
                         <div>@kendall</div>
                         <div>Life Changing App</div>
                     </div>
                     <div class="person">
+                        <img src="images/penguin.svg" width="15px">
                         <div>@alex</div>
                         <div>No Traffic Maker</div>
                     </div>
