--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
                 <div class="name">
                     <img src="images/bell.svg" width="20px">
                     <img src="images/cat.svg" width="20px">
-                    <div>Morgan Oakley</div>
+                    <h3>Morgan Oakley</h3>
                 </div>
                 <div class="greeting">
                     <img src="images/cat.svg" width="50px">
-                    <div>Hi there,<br>Morgan Oakley (@morgan)</div>
+                    <h2>Hi there,<br>Morgan Oakley (@morgan)</h2>
                 </div>
                 <div class="buttons">
                     <button>New</button>
@@ -59,38 +59,44 @@
 
             <div class="main-content">
                 <div class="project-container">
-                    <div>Your Projects</div>
-                    <div class="project">Super cool project
+                    <!-- <h3>Your Projects</h3> -->
+                    <div class="project">
+                        <h3>Super cool project</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
                         <img src="images/star.svg" width="15px">
                         <img src="images/eye.svg" width="15px">
                         <img src="images/share.svg" width="15px">
                     </div>
-                    <div class="project">Less cool project
+                    <div class="project">
+                        <h3>Less cool project</h3>
                         <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                         <img src="images/star.svg" width="15px">
                         <img src="images/eye.svg" width="15px">
                         <img src="images/share.svg" width="15px">
                     </div>
-                    <div class="project">Impossible app
+                    <div class="project">
+                        <h3>Impossible app</h3>
                         <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
                         <img src="images/star.svg" width="15px">
                         <img src="images/eye.svg" width="15px">
                         <img src="images/share.svg" width="15px">
                     </div>
-                    <div class="project">Easy peasy app
+                    <div class="project">
+                        <h3>Easy peasy app</h3>
                         <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                         <img src="images/star.svg" width="15px">
                         <img src="images/eye.svg" width="15px">
                         <img src="images/share.svg" width="15px">
                     </div>
-                    <div class="project">Ad blocker
+                    <div class="project">
+                        <h3>Ad blocker</h3>
                         <p>Ipsum faucibus vitae aliquet nec ullamcorper sit amet risus. Viverra adipiscing at in tellus integer feugiat scelerisque varius. </p>
                         <img src="images/star.svg" width="15px">
                         <img src="images/eye.svg" width="15px">
                         <img src="images/share.svg" width="15px">
                     </div>
-                    <div class="project">Money maker
+                    <div class="project">
+                        <h3>Money maker</h3>
                         <p>Nunc lobortis mattis aliquam faucibus purus in. Auctor eu augue ut lectus arcu bibendum at varius vel. </p>
                         <img src="images/star.svg" width="15px">
                         <img src="images/eye.svg" width="15px">
@@ -98,33 +104,26 @@
                     </div>
                 </div>
                 <div class="announcements">
-                    <div>Announcements</div>
-                    <div>Site Maintenance</div>
-                    <div>Community Share Day</div>
-                    <div>Updated Privacy Policy</div>
+                    <!-- <h3>Announcements</h3> -->
+                    <h4>Site Maintenance</h4>
+                    <p>orem ipsum dolor sit amet, consectetur adipiscing elit. Nullam vel mauris vel tellus placerat gravida at quis mauris</p>
+                    <hr>
+                    <h4>Community Share Day</h4>
+                    <p>Fusce ligula enim, tempor in urna sit amet, elementum pulvinar justo. Aliquam convallis a dolor aliquam vulputate</p>
+                    <hr>
+                    <h4>Updated Privacy Policy</h4>
+                    <p>Pellentesque at neque sit amet diam vestibulum commodo. Aenean placerat nisl at lorem sollicitudin, at tincidunt tellus elementum</p>
                 </div>
                 <div class="trending">
-                    <div>Trending</div>
-                    <div class="person">
-                        <img src="images/horse.svg" width="15px">
-                        <div>@tegan</div>
-                        <div>World Peace Builder</div>
-                    </div>
-                    <div class="person">
-                        <img src="images/cat.svg" width="15px">
-                        <div>@morgan</div>
-                        <div>Productivity App</div>
-                    </div>
-                    <div class="person">
-                        <img src="images/tortoise.svg" width="15px">
-                        <div>@kendall</div>
-                        <div>Life Changing App</div>
-                    </div>
-                    <div class="person">
-                        <img src="images/penguin.svg" width="15px">
-                        <div>@alex</div>
-                        <div>No Traffic Maker</div>
-                    </div>
+                    <!-- <h3>Trending</h3> -->
+                    <img src="images/horse.svg" width="30px">
+                    <div class="person">@tegan<br>World Peace Builder</div>
+                    <img src="images/cat.svg" width="30px">
+                    <div class="person">@morgan<br>Productivity App</div>
+                    <img src="images/penguin.svg" width="30px">
+                    <div class="person">@kendall<br>Life Changing App</div>
+                    <img src="images/tortoise.svg" width="30px">
+                    <div class="person">@alex<br>No Traffic Maker</div>
                 </div>
             </div>
 
