Align titles in main content area, add box-shadow and yellow border to projects, adjust margins and padding in main content area

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
             </div>
 
             <div class="main-content">
+                <h3 class="title-your-projects">Your Projects</h3>
                 <div class="project-container">
-                    <!-- <h3>Your Projects</h3> -->
                     <div class="project">
                         <h3>Super cool project</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
@@ -103,8 +103,8 @@
                         <img src="images/share.svg" width="15px">
                     </div>
                 </div>
+                <h3 class="title-announcements">Announcements</h3>
                 <div class="announcements">
-                    <!-- <h3>Announcements</h3> -->
                     <h4>Site Maintenance</h4>
                     <p>orem ipsum dolor sit amet, consectetur adipiscing elit. Nullam vel mauris vel tellus placerat gravida at quis mauris</p>
                     <hr>
@@ -114,8 +114,8 @@
                     <h4>Updated Privacy Policy</h4>
                     <p>Pellentesque at neque sit amet diam vestibulum commodo. Aenean placerat nisl at lorem sollicitudin, at tincidunt tellus elementum</p>
                 </div>
+                <h3 class="title-trending">Trending</h3>
                 <div class="trending">
-                    <!-- <h3>Trending</h3> -->
                     <img src="images/horse.svg" width="30px">
                     <div class="person">@tegan<br>World Peace Builder</div>
                     <img src="images/cat.svg" width="30px">
