Fix alignment of main-content container

--- a/index.html
+++ b/index.html
@@ -62,45 +62,57 @@
                 <div class="project-container">
                     <div class="project">
                         <h3>Super cool project</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-                        <img src="images/star.svg" width="15px">
-                        <img src="images/eye.svg" width="15px">
-                        <img src="images/share.svg" width="15px">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Maecenas sit amet ex a tortor maximus lacinia et quis est.</p>
+                        <div class="project-images">
+                            <img src="images/star.svg" width="15px">
+                            <img src="images/eye.svg" width="15px">
+                            <img src="images/share.svg" width="15px">
+                        </div>
                     </div>
                     <div class="project">
                         <h3>Less cool project</h3>
-                        <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                        <img src="images/star.svg" width="15px">
-                        <img src="images/eye.svg" width="15px">
-                        <img src="images/share.svg" width="15px">
+                        <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Sed mattis leo ut lectus rhoncus luctus. Integer tellus dolor, gravida nec sapien vulputate, scelerisque dignissim urna.</p>
+                        <div class="project-images">
+                            <img src="images/star.svg" width="15px">
+                            <img src="images/eye.svg" width="15px">
+                            <img src="images/share.svg" width="15px">
+                        </div>
                     </div>
                     <div class="project">
                         <h3>Impossible app</h3>
-                        <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
-                        <img src="images/star.svg" width="15px">
-                        <img src="images/eye.svg" width="15px">
-                        <img src="images/share.svg" width="15px">
+                        <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                        <div class="project-images">
+                            <img src="images/star.svg" width="15px">
+                            <img src="images/eye.svg" width="15px">
+                            <img src="images/share.svg" width="15px">
+                        </div>
                     </div>
                     <div class="project">
                         <h3>Easy peasy app</h3>
-                        <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                        <img src="images/star.svg" width="15px">
-                        <img src="images/eye.svg" width="15px">
-                        <img src="images/share.svg" width="15px">
+                        <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+                        <div class="project-images">
+                            <img src="images/star.svg" width="15px">
+                            <img src="images/eye.svg" width="15px">
+                            <img src="images/share.svg" width="15px">
+                        </div>
                     </div>
                     <div class="project">
                         <h3>Ad blocker</h3>
-                        <p>Ipsum faucibus vitae aliquet nec ullamcorper sit amet risus. Viverra adipiscing at in tellus integer feugiat scelerisque varius. </p>
-                        <img src="images/star.svg" width="15px">
-                        <img src="images/eye.svg" width="15px">
-                        <img src="images/share.svg" width="15px">
+                        <p>Ipsum faucibus vitae aliquet nec ullamcorper sit amet risus. Viverra adipiscing at in tellus integer feugiat scelerisque varius.</p>
+                        <div class="project-images">
+                            <img src="images/star.svg" width="15px">
+                            <img src="images/eye.svg" width="15px">
+                            <img src="images/share.svg" width="15px">
+                        </div>
                     </div>
                     <div class="project">
                         <h3>Money maker</h3>
-                        <p>Nunc lobortis mattis aliquam faucibus purus in. Auctor eu augue ut lectus arcu bibendum at varius vel. </p>
-                        <img src="images/star.svg" width="15px">
-                        <img src="images/eye.svg" width="15px">
-                        <img src="images/share.svg" width="15px">
+                        <p>Nunc lobortis mattis aliquam faucibus purus in. Auctor eu augue ut lectus arcu bibendum at varius vel. Donec finibus tempus lacus.</p>
+                        <div class="project-images">
+                            <img src="images/star.svg" width="15px">
+                            <img src="images/eye.svg" width="15px">
+                            <img src="images/share.svg" width="15px">
+                        </div>
                     </div>
                 </div>
                 <h3 class="title-announcements">Announcements</h3>
@@ -117,13 +129,13 @@
                 <h3 class="title-trending">Trending</h3>
                 <div class="trending">
                     <img src="images/horse.svg" width="30px">
-                    <div class="person">@tegan<br>World Peace Builder</div>
+                    <p>@tegan<br>World Peace Builder</p>
                     <img src="images/cat.svg" width="30px">
-                    <div class="person">@morgan<br>Productivity App</div>
+                    <p>@morgan<br>Productivity App</p>
                     <img src="images/penguin.svg" width="30px">
-                    <div class="person">@kendall<br>Life Changing App</div>
+                    <p>@kendall<br>Life Changing App</p>
                     <img src="images/tortoise.svg" width="30px">
-                    <div class="person">@alex<br>No Traffic Maker</div>
+                    <p>@alex<br>No Traffic Maker</p>
                 </div>
             </div>
 
